# linkedin_inviter

./: .flake8  .gitignore  README.md  crontab-amster.txt  crontab-berlin.txt  crontab-prague.txt  crontab.txt  pyproject.toml
.github/workflows/: deploy.yml  linters.yml
app/: __init__.py  inviter.py  selenium_actions.py  settings.py  status.py
